panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_indent_of_token_from_different_source_file.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_indent_of_token_from_different_source_file.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_indent_of_token_from_different_source_file.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression (string "indented"))
         (return 42)
         (expression (string "also indented")))))

----- stderr -----
