panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_macro_replacement_leads_to_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_macro_replacement_leads_to_macro_invocation.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_macro_replacement_leads_to_macro_invocation.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn(x: int) -> int`
      (params
         x~3 `int`)
      (compound-statement
         (return (multiply (name x~3 `int`) 3))))
   (function-definition
      main~4 `fn() -> int`
      (compound-statement
         (declaration g~6 `int` 3)
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (multiply 2
                  (call (name g~6 `int`)
                     9))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "%d\n")
               (multiply (multiply 2 9) (name g~6 `int`)))))))

----- stderr -----
